--- a/css/index.css
+++ b/css/index.css
@@ -10,10 +10,7 @@
     src: url(../fonts/FranklinGothic.ttf);
 } 
 
-.page-box {
-    width: 1000px;
-    height: 666px;
-    font-family: FranklinGothic;
+body {
     background-image: url(../img/bg-image.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -42,7 +39,8 @@
     margin: 71px 0 0 96px;
 }
 
-.style {                                            /* For Header links, Content h1 and text, Footer text*/
+.style {   
+    font-family: FranklinGothic;                 /* For Header links, Content h1 and text, Footer text*/
     color: #fff;
     text-shadow: 0 0 4px rgba(0, 0, 0, 0.65);
     font-weight: 400;
